# chess_mcp_analyzer

./: .gitignore  README.md  mcp_server.py  pyproject.toml
frontend_backup/: index.html  package-lock.json  package.json
frontend_backup/src/: App.jsx  index.css
scripts/: install_stockfish.py
server/: Dockerfile  mcp_server.py
stockfish-chess-web-gui/: index.html
stockfish-chess-web-gui/implementation-2/: index.html  index.js
ui/implementation-2/: index.html  index.js
